# slidex

./: CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: blank.pptx
docs/: API.md  DESIGN.md
python/slidex/: __init__.pyi
src/core/: mod.rs  package.rs  presentation.rs  relationships.rs  shape.rs  slide.rs  xml.rs
src/pyo3/: presentation.rs  shape.rs  slide.rs
tests/: core_xml.rs
tests/fixtures/: README.md
tools/fixture_gen/: generate_fixtures.py
