[package]
name = "slidex"
version = "0.1.0"
edition = "2021"

[lib]
name = "slidex"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", optional = true }
quick-xml = "0.37"
zip = "2.2"

[features]
default = []
python = ["pyo3"]
extension-module = ["python", "pyo3/extension-module"]
