[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "slidex"
version = "0.1.0"
description = "Rust-backed Python library for reading and writing PPTX files."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Slidex Contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
module-name = "slidex._core"
python-source = "python"
features = ["extension-module"]
